# APE-from-scratch

./: .env.sample  .gitignore  01_data_prep.py  02_baseline.py  03_ape.py  config.py  prompt_evaluator.py  pyproject.toml  requirements.txt  test_genai.py
assets/run_20240925_162235/: console.log.txt  prompt_history.txt  prompt_history_chronlogical.txt
assets/run_20240925_162235/prompt_0/: evaluation_results.csv  prompt.txt
assets/run_20240925_162235/prompt_1/: evaluation_results.csv  prompt.txt
assets/run_20240925_162235/prompt_2/: evaluation_results.csv  prompt.txt
assets/run_20240925_162235/prompt_3/: evaluation_results.csv  prompt.txt
assets/run_20240925_162235/prompt_4/: evaluation_results.csv  prompt.txt
assets/run_20240925_162235/prompt_5/: evaluation_results.csv  prompt.txt
assets/run_20240926_151854/: console.txt  prompt_history.txt  prompt_history_chronlogical.txt
assets/run_20240926_151854/prompt_0/: evaluation_results.csv
assets/run_20240926_151854/prompt_1/: evaluation_results.csv  prompt.txt
assets/run_20240926_151854/prompt_2/: evaluation_results.csv  prompt.txt
assets/run_20240926_151854/prompt_3/: evaluation_results.csv  prompt.txt
assets/run_20240926_151854/prompt_4/: evaluation_results.csv  prompt.txt
assets/run_20240926_151854/prompt_5/: evaluation_results.csv  prompt.txt
assets/run_20240926_175531/: prompt_history.txt  prompt_history_chronlogical.txt
assets/run_20240926_175531/prompt_0/: evaluation_results.csv
assets/run_20240926_175531/prompt_1/: evaluation_results.csv  prompt.txt
(+28 files in other folders)
